Fixed footer overlapping content

--- a/FAIRshakeHub/static/style/base.css
+++ b/FAIRshakeHub/static/style/base.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-    margin-bottom: 60px;
+    margin-bottom: 160px;
     font-family: 'Open Sans', sans-serif;
 }
 
